<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".debug.SettingActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/AudioPicker" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/au_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1" />

        <Button
            android:id="@+id/au_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2" />

        <Button
            android:id="@+id/au_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3" />

        <Button
            android:id="@+id/au_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4" />

        <Button
            android:id="@+id/au_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5" />

    </LinearLayout>

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm" />

</LinearLayout>